Fixed navbar margins so that blog posts don't have weird spacing. Fixed onscroll error, function now checks to see if the navbar exists before scrolling.

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -7,6 +7,15 @@
     transition: 0.8s;
 }
 
+.nav {
+    margin-bottom:100px;
+}
+
+
+#navbar_container {
+    padding-bottom:180px;
+}
+
 #navbar-bio {
     transition:0.8s;
     z-index:0;
